@@ -40,4 +40,5 @@ SOCKS_USER =
 THREADS = 1
 URL = /satellite_proxy/satellite_proxy.php
 REQUESTS_LOG = requests.log
-SELECTOR_CONF = proxy_selectors.cfg
+MONITORING_ENABLED = 1
+MONITORING_INTERVAL = 60
