@@ -1,3 +1,10 @@
+2011-09-05 Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* central_proxy.pl: Added monitoring feature for Pandora FMS.
+	* central_proxy.cfg: Added monitoring variables to config file.
+	* ProxySelector.pm: Changed configuration file path from config file to
+	ProxySelector lib.
+
 2011-09-01 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	* central_proxy/ProxyLib.pm: Fixed an error in thread_exit function
